<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/activity_main3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEBE9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/congrats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/youhave"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/points3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/points"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/congrats"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:onClick="reset"
                android:text="@string/tryAgain"
                android:textAllCaps="true"
                android:textAppearance="@style/CodeFont"
                android:textColor="#ffff" />
        </LinearLayout>

    </ScrollView>
</layout>