<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quizApp.MainActivity">

    <ScrollView
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEBE9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEBE9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/your_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/YourName"
                    android:inputType="textCapWords"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="okButton"
                    android:text="@string/ok"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/enjoy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/Start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="200dp"
                android:onClick="beginQuiz"
                android:text="@string/start"
                android:textColor="#FFF"
                android:textSize="30sp" />


        </LinearLayout>
    </ScrollView>
</layout>
